@@ -36,6 +36,8 @@ enum class MpcEvent
     SHADER_POSTRESIZE_SELECTION_CHANGED,
     SHADER_SELECTION_CHANGED,
     SHADER_LIST_CHANGED,
+    DISPLAY_MODE_AUTOCHANGING,
+    DISPLAY_MODE_AUTOCHANGED,
 };
 
 class EventClient;
