@@ -40,6 +40,8 @@ class CPPageFullscreen : public CPPageBase
     unsigned m_uHideFullscreenControlsDelay;
     BOOL m_bHideFullscreenDockedPanels;
 
+    CSpinButtonCtrl m_delaySpinner;
+
 public:
     CPPageFullscreen();
     virtual ~CPPageFullscreen();
@@ -57,6 +59,8 @@ public:
     };
 
     AChFR m_AutoChangeFullscrRes;
+    unsigned m_uAutoChangeFullscrResDelay;
+
     CStringW m_f_hmonitor;
     int m_iMonitorType;
     CComboBox m_iMonitorTypeCtrl;
@@ -82,7 +86,6 @@ protected:
     void OnUpdateHideControls(CCmdUI* pCmdUI);
 
 public:
-    afx_msg void OnUpdateList(CCmdUI* pCmdUI);
     afx_msg void OnNMClickList1(NMHDR* pNMHDR, LRESULT* pResult);
     afx_msg void OnLvnItemchangedList1(NMHDR* pNMHDR, LRESULT* pResult);
     afx_msg void OnBeginlabeleditList(NMHDR* pNMHDR, LRESULT* pResult);
@@ -90,17 +93,15 @@ public:
     afx_msg void OnEndlabeleditList(NMHDR* pNMHDR, LRESULT* pResult);
     afx_msg void OnCustomdrawList(NMHDR* pNMHDR, LRESULT* pResult);
     afx_msg void OnCheckChangeList();
-    afx_msg void OnUpdateApplyDefault(CCmdUI* pCmdUI);
     afx_msg void OnUpdateFullScrCombo();
-    afx_msg void OnUpdateRestoreRes(CCmdUI* pCmdUI);
     afx_msg void OnRemove();
     afx_msg void OnUpdateRemove(CCmdUI* pCmdUI);
     afx_msg void OnAdd();
-    afx_msg void OnUpdateAdd(CCmdUI* pCmdUI);
     afx_msg void OnMoveUp();
     afx_msg void OnMoveDown();
     afx_msg void OnUpdateUp(CCmdUI* pCmdUI);
     afx_msg void OnUpdateDown(CCmdUI* pCmdUI);
+    afx_msg void OnUpdateAutoChangeFullscrRes(CCmdUI* pCmdUI);
 
     void ReindexList();
     void ReindexListSubItem();
