@@ -959,7 +959,7 @@ BEGIN
     CONTROL         "Launch files in fullscreen",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,26,280,8
     GROUPBOX        "",IDC_STATIC,4,51,288,36
     CONTROL         "Hide controls in fullscreen",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,51,280,8
-    LTEXT           "ms",IDC_STATIC1,267,63,23,8
+    LTEXT           "ms",IDC_STATIC1,266,63,23,8
     COMBOBOX        IDC_COMBO2,8,61,224,12,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Hide docked panels",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,76,280,8
     CONTROL         "Exit fullscreen at the end of playback",IDC_CHECK5,
@@ -972,13 +972,17 @@ BEGIN
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,101,224,112
     PUSHBUTTON      "Add",IDC_BUTTON1,235,101,53,16
     PUSHBUTTON      "Del",IDC_BUTTON2,235,119,53,16
-    PUSHBUTTON      "Up",IDC_BUTTON3,235,179,53,16
-    PUSHBUTTON      "Down",IDC_BUTTON4,235,197,53,16
+    PUSHBUTTON      "Up",IDC_BUTTON3,235,143,53,16
+    PUSHBUTTON      "Down",IDC_BUTTON4,235,161,53,16
+    EDITTEXT        IDC_EDIT1,235,61,28,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Apply default monitor mode on fullscreen exit",IDC_CHECK3,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,216,271,8
     CONTROL         "Restore resolution on program exit",IDC_RESTORERESCHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,227,271,8
-    EDITTEXT        IDC_EDIT1,235,61,28,12,ES_AUTOHSCROLL | ES_NUMBER
+    GROUPBOX        "Delay",IDC_STATIC,235,187,53,25
+    EDITTEXT        IDC_EDIT2,240,197,24,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_HOTTRACK,267,180,10,8
+    LTEXT           "s",IDC_STATIC2,267,199,19,8
 END
 
 IDD_NAVIGATION_DLG DIALOGEX 0, 0, 93, 150
@@ -1214,6 +1218,13 @@ BEGIN
     IDD_PPAGESYNC, DIALOG
     BEGIN
         VERTGUIDE, 10
+    END
+
+    IDD_PPAGEFULLSCREEN, DIALOG
+    BEGIN
+        VERTGUIDE, 235
+        VERTGUIDE, 288
+        HORZGUIDE, 204
     END
 END
 #endif    // APSTUDIO_INVOKED
